# warp

./: .gitignore  0_Deploy.txt  404.html  CHANGELOG  CHANGES.md  CLAUDE.md  EMPIAR-10491_5TS_e2e.sh  README.md  Warp.sln  build-native-unix.sh  index.html  mkdocs.yml  publish-unix.sh  publish-windows.bat  sitemap.xml  unique_warnings.txt  warp_build.yml  warp_build_windows.yml
Bridge/: Bridge.csproj  Program.cs
Cube/: App.xaml  App.xaml.cs  CoordsExportWindow.xaml  CoordsExportWindow.xaml.cs  CoordsImportWindow.xaml  CoordsImportWindow.xaml.cs  Cube.csproj  MainWindow.xaml  MainWindow.xaml.cs  Options.cs  Particle.cs  README.md
EstimateWeights/: EstimateWeights.cs  EstimateWeights.csproj  Options.cs
Frankenmap/: Frankenmap.cs
LibTorchSharp/: CMakeLists.txt  LibTorchSharp.vcxproj  LibTorchSharp.vcxproj.filters
LibTorchSharp/LibTorchSharp/: BoxNetMM.cpp  BoxNetMulti.cpp  C2DNet.cpp  CMakeLists.txt  Conv3dStd.cpp  CustomModules.h  Discriminator3D.cpp  DistanceNet.cpp  MLP.cpp  MultiGPUModule.cpp  MultiGPUModule.h  ParticleWGAN.cpp  PoseToMatrix3D.cpp  ResNet.cpp  THSAutograd.cpp  THSAutograd.h  THSNN.cpp  THSNN.h  THSTensor.cpp  THSTensor.h  THSTorch.cpp  THSTorch.h  UNet2D.cpp  UNet3D.cpp  Utils.h  cifar10.h  parallel.h
M/: App.xaml  M.csproj  MainWindow.xaml  MainWindow.xaml.cs  Options.cs
MCore/: MCore.cs  MCore.csproj  OptionsCLI.cs
MTools/: MTools.cs  MTools.csproj
MrcConverter/: MrcConverter.cs  MrcConverter.csproj  (+1 more)
NativeAcceleration/: CMakeLists.txt  LanczosEER.hpp  NativeAcceleration.vcxproj  NativeAcceleration.vcxproj.filters
NativeAcceleration/gtom/include/: Angles.cuh  Backproject.cu  Binary.cuh  CTF.cuh  Correlation.cuh  CubicInterp.cuh  DeviceFunctions.cuh  FFT.cuh  GTOM.cuh  Generics.cuh  Helper.cuh  IO.cuh  ImageManipulation.cuh  Masking.cuh  Prerequisites.cuh  Projection.cuh  Reconstruction.cuh  Relion.cuh  Resolution.cuh  Transformation.cuh  helper_math.cuh
NativeAcceleration/gtom/src/BinaryManipulation/: Binarize.cu  Dilate.cu  DistanceMap.cu
NativeAcceleration/gtom/src/CTF/: CommonPSF.cu  Correct.cu  Periodogram.cu  RotationalAverage.cu  Simulate.cu  Wiener.cu
NativeAcceleration/gtom/src/Correlation/: CCF.cu  LocalPeaks.cu  Peak.cu  Picker.cu  ProbabilisticPicker.cu  Realspace.cu  SimilarityMatrix.cu  SubTomograms.cu  TomoPicker.cu
NativeAcceleration/gtom/src/CubicSplines/: PCHIP.cu  cubicPrefilter2D.cu  cubicPrefilter3D.cu  cubicTex.cu
NativeAcceleration/gtom/src/CubicSplines/internal/: bspline_kernel.cu  cubicPrefilter_kernel.cu  math_func.cu  version.cu
NativeAcceleration/gtom/src/FFT/: FFT.cu  FFTRemap.cu  FFTResize.cu  IFFT.cu
NativeAcceleration/gtom/src/Generics/: Arithmetics.cu  Boolean.cu  CompositeArithmetics.cu  Dev.cu  Extraction.cu  Histogram.cu  IndexOf.cu  Insertion.cu  LocalStd.cu  MakeAtlas.cu  MinMax.cu  MinMaxMonolithic.cu  Padding.cu  Polynomials.cu  Reductions.cu  Sum.cu  SumMinMax.cu
NativeAcceleration/gtom/src/Helpers/: AngularSpacing.cu  Euler.cu  GridSpacing.cu  HermitianSymmetry.cu  InterpolateIrregular.cu  KaiserBessel.cpp  Memory.cu  Misc.cpp  TextureObject.cu  TypeConversion.cu
NativeAcceleration/gtom/src/IO/: em.cpp  mrc.cpp  raw.cpp
NativeAcceleration/gtom/src/ImageManipulation/: AnisotropicLowpass.cu  Bandpass.cu  BeamTilt.cu  Distort.cu  Dose.cu  LocalLowpass.cu  Norm.cu  Xray.cu
NativeAcceleration/gtom/src/Masking/: ConeMask.cu  IrregularSphereMask.cu  RectangleMask.cu  Remap.cu  SphereMask.cu  Windows.cu
NativeAcceleration/gtom/src/Projection/: Backward.cu  Forward.cu  PseudoAtoms.cu  RaySum.cu  Weighting.cu
NativeAcceleration/gtom/src/Reconstruction/: RecFourier.cu  RecFourierAdd.cu  RecSIRT.cu  RecWBP.cu
NativeAcceleration/gtom/src/Relion/: Backproject.cu  BackprojectShifted.cu  BackprojectTomo.cu  ConvertWeights.cu  DiffRemap.cu  Misc.cu  Project.cu  ProjectShifted.cu  StoreWeights.cu
NativeAcceleration/gtom/src/Resolution/: AnisotropicFSC.cu  FSC.cu  LocalFSC.cu  LocalFSCBFac.cu  LocalFilter.cu
NativeAcceleration/gtom/src/Transformation/: Bin.cu  Combined.cu  Coordinates.cu  FFTLines.cu  FitMagAnisotropy.cu  MagAnisotropy.cu  Rotation.cu  Scale.cu  Shift.cu  Warp2D.cu
NativeAcceleration/include/: Functions.h
NativeAcceleration/liblion/: avx_helper.h  backprojector.cpp  backprojector.h  complex.cpp  complex.h  ctf.cpp  ctf.h  error.cpp  error.h  euler.cpp  euler.h  fftw.cpp  fftw.h  filename.cpp  filename.h  funcs.cpp  funcs.h  healpix_sampling.cpp  healpix_sampling.h  image.cpp  image.h  liblion.h  macros.h  mask.cpp  mask.h  matrix1d.cpp  matrix1d.h  matrix2d.cpp  matrix2d.h  memory.cpp  memory.h  metadata_container.cpp  metadata_container.h  metadata_label.cpp  metadata_label.h  metadata_table.cpp  metadata_table.h  multidim_array.cpp  multidim_array.h  numerical_recipes.cpp  (+12 more)
NativeAcceleration/liblion/Healpix_2.15a/: arr.h  cxxutils.cc  cxxutils.h  geom_utils.h  healpix_base.cc  healpix_base.h  pointing.h
NativeAcceleration/src/: Angles.cpp  Backprojection.cu  Bessel.cpp  BoxNet2.cu  C2DNet.cu  CTF.cu  Correlation.cpp  CubeNet.cu  CubicGPU.cu  DFT.cu  Deconv.cu  Defects.cu  Device.cpp  DeviceMemory.cpp  EER.cpp  Einspline.cpp  FFT.cpp  FSC.cpp  Float16.cpp  Helical.cu  MPARefine.cu  Motion.cu  PCA.cu  ParticleMultiBody.cu  ParticleNMA.cu  ParticleSoftBody.cu  Post.cu  Raycast.cu  RealspaceProjection.cu  RelionProjector.cpp  Symmetry.cpp  TiffNative.cpp  Tools.cu  WeightOptimization.cpp
NativeAcceleration/src/einspline/: aligned_alloc.h  bspline.h  bspline_base.h  bspline_create.cpp  bspline_data.cpp  bspline_eval_sse_s.h  bspline_eval_std_s.h  bspline_structs.h  config.h
(+516 files in other folders)
